test_programs/compile_failure/noirc_frontend_tests_aliases_self_referring_type_alias_with_generics_is_not_allowed/src/main.nr

        type Id<T> = T;

        fn main() {
            let _: Id<Id<Field>> = 1;
        }
    